agoge-pricing/force-app/main/default/objects/OrderItem/fields/FreightValue__c.field-meta.xml
<CustomField>
    <fullName>FreightValue__c</fullName>
    <label>Freight Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>