agoge-pricing/force-app/main/default/objects/OrderItem/fields/OrderItemCode__c.field-meta.xml
<CustomField>
    <fullName>OrderItemCode__c</fullName>
    <description>Order item ERP Code</description>
    <label>Order Item Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>