agoge-pricing/force-app/main/default/objects/OrderItem/fields/PriceWithoutMargin__c.field-meta.xml
<CustomField>
    <fullName>PriceWithoutMargin__c</fullName>
    <label>Price Without Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>