agoge-pricing/force-app/main/default/objects/OrderItem/fields/TotvsItem__c.field-meta.xml
<CustomField>
    <fullName>TotvsItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOTVS Item</label>
    <type>Checkbox</type>
</CustomField>