agoge-pricing/force-app/main/default/objects/OrderItem/validationRules/OrderItemNonZeroQuantityUnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderItemNonZeroQuantityUnitPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(
		ISBLANK(Quantity),
		Quantity = 0
	),
	OR(
		ISBLANK(UnitPrice),
		UnitPrice = 0
	)
)</errorConditionFormula>
    <errorMessage>The quantity and/or price unit fields cannot be zeroed</errorMessage>
</ValidationRule>